--- a/index.html
+++ b/index.html
@@ -5,9 +5,250 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Styles css -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>F8-Project-02</title>
   </head>
-  <body></body>
+  <body>
+    <main style="height: 5000px">
+      <header class="header fixed">
+        <div class="content">
+          <div class="body">
+            <a href="#!">
+              <img src="./assets/img/Logo-primary.svg" alt="" class="logo" />
+            </a>
+            <nav class="nav">
+              <ul>
+                <li class="active">
+                  <a href="#!">Home</a>
+                </li>
+                <li>
+                  <a href="#!">Courses</a>
+                </li>
+                <li>
+                  <a href="#!">Pricing</a>
+                </li>
+                <li>
+                  <a href="#!">Reviews</a>
+                </li>
+              </ul>
+            </nav>
+            <!-- Action -->
+            <div class="action">
+              <a href="#!" class="btn">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- HERO -->
+      <div class="hero">
+        <div class="content">
+          <div class="body">
+            <!-- HERO left -->
+            <div class="media-block">
+              <img
+                class="hero-img"
+                src="./assets/img/hero-img-big.svg"
+                alt="Learn now"
+              />
+              <div class="hero-sumary">
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/sumary-1.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">UI/UX Design</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/sumary-2.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">Development</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/sumary-3.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">30 Courses</p>
+                    <p class="title">Marketing</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- HERO right -->
+            <div class="content-block">
+              <h1 class="heading">
+                Learn without limits and spread knowledge.
+              </h1>
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+              <div class="cta-group">
+                <a href="#!" class="btn">See Courses</a>
+                <button class="watch-video">
+                  <div class="icon">
+                    <img src="./assets/img/watch-video.svg" alt="watch video" />
+                  </div>
+                  <span>Watch Video</span>
+                </button>
+              </div>
+              <p class="desc mt48-mb8">Recent engagement</p>
+              <p class="desc">
+                <strong>50K</strong> Students
+                <strong class="pl28">70+</strong> Courses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- POPULAR -->
+      <div class="popular">
+        <div class="content">
+          <div class="body">
+            <h2 class="heading">Our popular courses</h2>
+            <div class="row-1">
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+              <a href="#!" class="btn-back">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7 1L1 7L7 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+              <a href="#!" class="btn-next">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1 1L7 7L1 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+            </div>
+            <div class="row-2">
+              <div class="item">
+                <img
+                  src="./assets/img/popular-1.svg"
+                  alt=""
+                  class="row-2-img"
+                />
+
+                <div class="info">
+                  <div class="heading">
+                    <h3 class="row-2-h3 cliptext">Basic web design</h3>
+                    <div class="asses">
+                      <img
+                        src="./assets/img/popular-star.svg"
+                        alt=""
+                        class="star"
+                      />
+                      <p class="number">4.5</p>
+                    </div>
+                  </div>
+                  <p class="desc cliptext">
+                    Get the best course, gain knowledge and shine for your
+                    future career.
+                  </p>
+                  <div class="item-row">
+                    <strong class="dolar">$120.75</strong>
+                    <a href="#!" class="action">Book Now</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <img
+                  src="./assets/img/popular-2.svg"
+                  alt=""
+                  class="row-2-img"
+                />
+                <div class="info">
+                  <div class="heading">
+                    <h3 class="row-2-h3 cliptext">UI/UX design</h3>
+                    <div class="asses">
+                      <img
+                        src="./assets/img/popular-star.svg"
+                        alt=""
+                        class="star"
+                      />
+                      <p class="number">4.5</p>
+                    </div>
+                  </div>
+                  <p class="desc cliptext">
+                    Get the best course, gain knowledge and shine for your
+                    future career.
+                  </p>
+                  <div class="item-row">
+                    <strong class="dolar">$120.75</strong>
+                    <a href="#!" class="action">Book Now</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <img
+                  src="./assets/img/popular-3.svg"
+                  alt=""
+                  class="row-2-img"
+                />
+                <div class="info">
+                  <div class="heading">
+                    <h3 class="row-2-h3 cliptext">Web App design</h3>
+                    <div class="asses">
+                      <img
+                        src="./assets/img/popular-star.svg"
+                        alt=""
+                        class="star"
+                      />
+                      <p class="number">4.5</p>
+                    </div>
+                  </div>
+                  <p class="desc">
+                    Get the best course, gain knowledge and shine for your
+                    future career.
+                  </p>
+                  <div class="item-row">
+                    <strong class="dolar">$120.75</strong>
+                    <a href="#!" class="action">Book Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
